--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^1.40.0",
     "cloudinary-core": "^2.13.0",
     "cloudinary-react": "^1.8.1",
+    "jotai": "^2.3.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cloudinary-upload-widget": "^2.0.0",
