--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "MSN",
   "description": "Your best social media",
   "lang": "fr",
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "white",
   "theme_color": "white",
